tests/NormalTests/paczka1/fuzzy1/41661334.err
Error in line 17: z1I AQ85 250,Q
Error in line 14: z1I A985 86,8
Error in line 30: 0OHWmsAXff A29 86,8
Error in line 32: 5PWUu A985 274,2
